# xtensor-python

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  environment-dev.yml  setup.py  xtensor-python.pc.in  xtensor-pythonConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux-clang.yml  azure-pipelines-linux-gcc.yml  azure-pipelines-osx.yml  unix-build.yml
.github/workflows/: check.yml  ci.yml  linux.yml  osx.yml  profile.yml  windows.yml
benchmark/: CMakeLists.txt  benchmark_pyarray.py  benchmark_pybind_array.py  benchmark_pybind_vectorize.py  benchmark_pytensor.py  benchmark_pyvectorize.py  main.cpp  setup.py
cmake/: FindNumPy.cmake
conda.recipe/: meta.yaml
docs/: Doxyfile  environment.yml
docs/source/: api_reference.rst  array_tensor.rst  basic_usage.rst  compilers.rst  conf.py  cookie_cutter.rst  cookiecutter.rst  dev_build_options.rst  examples.rst  index.rst  installation.rst  numpy_capi.rst  pyarray.rst  pytensor.rst  pyvectorize.rst  releasing.rst  usage.rst
docs/source/examples/copy_cast/: CMakeLists.txt  example.py  main.cpp
docs/source/examples/readme_example_1/: CMakeLists.txt  example.py  main.cpp
docs/source/examples/sfinae/: CMakeLists.txt  example.py  main.cpp  mymodule.hpp  python.cpp
docs/source/examples/sfinae/src/: foobar.hpp  python.cpp
include/xtensor-python/: pyallocator.hpp  pyarray.hpp  pyarray_backstrides.hpp  pybind11_backport.hpp  pybuffer_adaptor.hpp  pycontainer.hpp  pynative_casters.hpp  pyoptional.hpp  pystrides_adaptor.hpp  pytensor.hpp  pytraits.hpp  pyvectorize.hpp  xpointer_adaptor.hpp  xtensor_python_config.hpp  xtensor_type_caster_base.hpp
python-module/: CMakeLists.txt  setup.py
python-module/module/: main.cpp
python-module/module/xt/: __init__.py
python-module/profiling/: test_a.py
python-module/tests/: test_a.py
test/: CMakeLists.txt  copyGTest.cmake.in  downloadGTest.cmake.in  main.cpp  setup.py  test-environment.yml  test_common.hpp  test_pyarray.cpp  test_pyarray.py  test_pyarray_ref.cpp  test_pyarray_traits.cpp  test_pytensor.cpp  test_pyvectorize.cpp  test_sfinae.cpp
test_python/: main.cpp  setup.py  test_pyarray.py
xtensor_python/: __main__.py
